# SolidRS

./: .gitignore  Cargo.toml  README.md  asterisk.fbx
crates/solid-fbx/: Cargo.toml
crates/solid-fbx/src/: convert.rs  lib.rs  saver.rs
crates/solid-fbx/tests/common/: mod.rs
crates/solid-gltf/: Cargo.toml  README.md
crates/solid-gltf/src/: convert.rs  document.rs  lib.rs
crates/solid-gltf/tests/: test_gltf_loader.rs  test_gltf_round_trip.rs  test_gltf_saver.rs
crates/solid-gltf/tests/common/: mod.rs
crates/solid-obj/: Cargo.toml  README.md
crates/solid-obj/src/: lib.rs  saver.rs
crates/solid-obj/tests/: test_obj_loader.rs  test_obj_round_trip.rs  test_obj_saver.rs
crates/solid-obj/tests/common/: mod.rs
crates/solid-ply/: Cargo.toml  README.md
crates/solid-ply/src/: lib.rs
crates/solid-ply/tests/: test_ply_loader.rs  test_ply_round_trip.rs  test_ply_saver.rs
crates/solid-ply/tests/common/: mod.rs
crates/solid-rs/: Cargo.toml
crates/solid-rs/examples/: basic_load.rs  basic_save.rs  build_scene.rs  custom_format.rs
crates/solid-rs/src/: builder.rs  error.rs  extensions.rs  lib.rs  prelude.rs  registry.rs  value.rs
crates/solid-rs/src/geometry/: bounds.rs  face.rs  mod.rs  transform.rs  vertex.rs
crates/solid-rs/src/scene/: animation.rs  camera.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  scene.rs  skin.rs  texture.rs
crates/solid-rs/src/traits/: format.rs  loader.rs  mod.rs  saver.rs  visitor.rs
crates/solid-rs/tests/: test_builder.rs  test_error.rs  test_extensions.rs  test_geometry_bounds.rs  test_geometry_face.rs  test_geometry_transform.rs  test_geometry_vertex.rs  test_registry.rs  test_scene.rs  test_scene_animation.rs  test_scene_camera.rs  test_scene_light.rs  test_scene_material.rs  test_scene_mesh.rs  test_scene_node.rs  test_scene_skin.rs  test_scene_texture.rs  test_traits_format.rs  test_traits_loader.rs  test_value.rs
crates/solid-rs/tests/common/: mod.rs
crates/solid-stl/: Cargo.toml
crates/solid-stl/tests/: test_stl_loader.rs  test_stl_round_trip.rs  test_stl_saver.rs
crates/solid-stl/tests/common/: mod.rs
crates/solid-usd/: Cargo.toml
crates/solid-usd/src/: convert.rs  document.rs  lexer.rs  lib.rs  loader.rs  parser.rs  saver.rs
crates/solid-usd/tests/: test_usda_loader.rs  test_usda_round_trip.rs
crates/solid-usd/tests/common/: mod.rs
docs/: architecture.md  error-handling.md  format-registry.md  geometry.md  getting-started.md  implementing-a-loader.md  implementing-a-saver.md  scene-graph.md  traits-reference.md
examples/fbx-to-obj/: Cargo.toml
examples/fbx-to-obj/src/: main.rs
