[workspace]
members  = [
    "crates/solid-rs",
    "crates/solid-fbx",
    "crates/solid-obj",
    "examples/fbx-to-obj",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
authors       = ["SolidRS Contributors"]
license       = "MIT"
repository    = "https://github.com/Far-Beyond-Pulsar/solid-rs"
homepage      = "https://github.com/Far-Beyond-Pulsar/solid-rs"

[workspace.dependencies]
solid-rs  = { path = "crates/solid-rs", version = "0.1.0" }
glam      = "0.27"
thiserror = "2"
flate2    = "1"
