[package]
name         = "solid-fbx"
version      = "0.1.0"
edition      = "2021"
description  = "FBX 3D model loader/saver for the SolidRS ecosystem (solid-rs format crate)"
keywords     = ["fbx", "3d", "model", "mesh", "scene"]
categories   = ["graphics", "rendering", "game-development"]
license      = "MIT"
repository   = "https://github.com/Far-Beyond-Pulsar/solid-rs"

[dependencies]
solid-rs  = { workspace = true }
glam      = { workspace = true }
thiserror = { workspace = true }
flate2    = { workspace = true }

[dev-dependencies]
solid-rs = { workspace = true }
glam     = { workspace = true }
