[package]
name        = "solid-gltf"
description = "glTF 2.0 / GLB loader and saver for SolidRS"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
solid-rs   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
glam       = { workspace = true }

[dev-dependencies]
solid-rs   = { workspace = true }
glam       = { workspace = true }
serde_json = { workspace = true }
